--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version '2.2.2.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
 }
 
@@ -11,4 +13,13 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.3.1.RELEASE'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    testCompile group: 'com.h2database', name: 'h2', version: '1.3.148'
+    testCompile 'io.rest-assured:rest-assured:4.3.0'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
