--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -12,14 +12,20 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.3.1.RELEASE'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    testCompile group: 'com.h2database', name: 'h2', version: '1.3.148'
-    testCompile 'io.rest-assured:rest-assured:4.3.0'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile 'io.rest-assured:rest-assured:4.3.0'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'io.rest-assured:json-path:4.3.0'
+//    testImplementation 'io.rest-assured:xml-path:4.3.0'
+//    testImplementation 'io.rest-assured:spring-mock-mvc:4.3.0'
+    testImplementation 'io.rest-assured:spring-web-test-client:4.3.0'
+//    testImplementation 'io.rest-assured:json-schema-validator:4.3.0'
+
 }
