--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -19,13 +19,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
+
+    // https://mvnrepository.com/artifact/io.rest-assured/rest-assured-all
+    compile group: 'io.rest-assured', name: 'rest-assured-all', version: '4.2.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
-//    testCompile 'io.rest-assured:rest-assured:4.3.0'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'io.rest-assured:json-path:4.3.0'
-//    testImplementation 'io.rest-assured:xml-path:4.3.0'
-//    testImplementation 'io.rest-assured:spring-mock-mvc:4.3.0'
-    testImplementation 'io.rest-assured:spring-web-test-client:4.3.0'
-//    testImplementation 'io.rest-assured:json-schema-validator:4.3.0'
+    testImplementation 'io.rest-assured:spring-web-test-client:4.2.0'
 
 }
