--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -19,6 +19,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
+    //lombok
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.16'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 
     // https://mvnrepository.com/artifact/io.rest-assured/rest-assured-all
     compile group: 'io.rest-assured', name: 'rest-assured-all', version: '4.2.0'
